use dynamically configured partition ids in fee management
- add system id cli param to money backend
- add system id cli param to tokens backend
- add /info endpoint to money backend
- add /info endpoint to tokens backend
- wallet fees cmd now uses /info endpoints to fetch system identifiers
