# pkg/wallet/money/backend/rest_api.go
@@ -2,6 +2,7 @@ package backend
 
 import (
 	"bytes"
+	"encoding/hex"
 	"errors"
 	"fmt"
 	"io"
@@ -31,6 +32,7 @@ type (
 		Service            WalletBackendService
 		ListBillsPageLimit int
 		rw                 *sdk.ResponseWriter
+		SystemID           []byte
 	}
 
 	ListBillsResponse struct {
@@ -79,6 +81,7 @@ func (api *moneyRestAPI) Router() *mux.Router {
 	apiV1.HandleFunc("/locked-fee-credit/{systemId}/{billId}", api.getLockedFeeCreditFunc).Methods("GET", "OPTIONS")
 	apiV1.HandleFunc("/closed-fee-credit/{billId}", api.getClosedFeeCreditFunc).Methods("GET", "OPTIONS")
 	apiV1.HandleFunc("/transactions/{pubkey}", api.postTransactions).Methods("POST", "OPTIONS")
+	apiV1.HandleFunc("/info", api.getInfo).Methods("GET", "OPTIONS")
 
 	apiV1.Handle("/swagger/swagger-initializer.js", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		initializer := "swagger/swagger-initializer-money.js"
@@ -353,7 +356,7 @@ func (api *moneyRestAPI) postTransactions(w http.ResponseWriter, r *http.Request
 	api.Service.HandleTransactionsSubmission(egp, senderPubkey, txs.Transactions)
 
 	if errs := api.Service.SendTransactions(r.Context(), txs.Transactions); len(errs) > 0 {
-		log.Debug("error on GET /transactions: ", errs)
+		log.Debug("error on POST /transactions: ", errs)
 		w.WriteHeader(http.StatusInternalServerError)
 		api.rw.WriteResponse(w, errs)
 		return
@@ -413,6 +416,12 @@ func (api *moneyRestAPI) getClosedFeeCreditFunc(w http.ResponseWriter, r *http.R
 		return
 	}
 	api.rw.WriteCborResponse(w, cfc)
+}
+
+func (api *moneyRestAPI) getInfo(w http.ResponseWriter, _ *http.Request) {
+	systemID := hex.EncodeToString(api.SystemID)
+	res := sdk.InfoResponse{SystemID: systemID}
+	api.rw.WriteResponse(w, res)
 }
 
 func parsePubKeyQueryParam(r *http.Request) (sdk.PubKey, error) {
